# BlobDetection

./: .gitignore  CMakeLists.txt  README.md
src/: blobdetector.cpp  blobdetector.h  blobdetectorcontours.cpp  blobdetectorcontours.h  blobdetectorfloodfill.cpp  blobdetectorfloodfill.h  blobdetectorlog.cpp  blobdetectorlog.h  blobevaluator.cpp  blobevaluator.h  main.cpp
